@@ -1,3 +1,9 @@
+2021-05-16 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCsalloc.hpp,
+	  support/regression/tests/bug-3238.c:
+	  Fix bug #3238.
+
 2021-05-15 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCsymt.c,
